# openvx_apps

./: README.md  with_graph.cpp
debug_include/lib/: openvx-c_model.lib  vxu.lib
include/VX/: vx_kernels.h  vx_nodes.h  vx_types.h  vxu.h
lib/: openvx-c_model.lib  openvx.lib  vxu.lib
openvx_sample-1.0.1/: CMakeLists.txt  copydll.bat  copydll_release.bat  logit.txt  logit.txt1  logit2.txt
openvx_sample-1.0.1/sample/: CMakeLists.txt
openvx_sample-1.1/: Android.mk  Build.py  CMakeLists.txt  LICENSE  Makefile  README
openvx_sample-1.1/cmake_utils/: CMakeFuncs.txt  CMake_android_tools.cmake  CMake_linux_tools.cmake  CMake_windows_tools.cmake
openvx_sample-1.1/concerto/: combo.mak  combo_filters.mak  definitions.mak  finale.mak  machine.mak  os.mak  platform.mak  prelude.mak  rules.mak  scm.mak  shell.mak  target.mak
openvx_sample-1.1/debug/: Android.mk  CMakeLists.txt  concerto.mak  vx_debug.c  vx_debug.h
openvx_sample-1.1/examples/: Android.mk  CMakeLists.txt  concerto.mak  vx_arrayrange.c  vx_callback.c  vx_convolution.c  vx_delaygraph.c  vx_examples.h  vx_extensions.c  vx_eyetrack.c  vx_factory_corners.c  vx_factory_edge.c  vx_factory_pipeline.c  vx_graph_factory.c  vx_graph_factory.h  vx_imagepatch.c  vx_independent.c  vx_introspection.c  vx_kernels.c  vx_matrix_access.c  vx_multi_node_graph.c  vx_parameters.c  vx_single_node_graph.c  vx_super_res.c  vx_tiling_add.c  vx_tiling_alpha.c  vx_tiling_box.c  vx_tiling_ext.c  vx_tiling_ext.h  vx_tiling_gaussian.c  vx_tiling_main.c  vx_warps.c  vx_xyz_lib.c  vx_xyz_module.c
openvx_sample-1.1/helper/: Android.mk  CMakeLists.txt  concerto.mak  vx_helper.c
openvx_sample-1.1/include/: CMakeLists.txt  concerto.mak
openvx_sample-1.1/kernels/: CMakeLists.txt
openvx_sample-1.1/libraries/: Android.mk  CMakeLists.txt
openvx_sample-1.1/sample/: CMakeLists.txt  concerto.mak
openvx_sample-1.1/sample/sift/: CMakeLists.txt  CMakeLists.txt~  commons.h  commons.h~  sift.cpp  sift.cpp~  sift_seq.cpp  test.cpp
openvx_sample-1.1/tools/: CMakeLists.txt
own_module_code_C/: vx_calcsiftgradient.c  vx_findsiftkeypoint.c  vx_verifykeypoint.c
raw/: image_1920x1080.pgm
release_include/lib/: openvx-c_model.lib  openvx.lib  vxu.lib
seq_impl/: CMakeLists.txt
seq_impl/sift/: opencv_sift.cpp
sift_sourcecode/: no_graph.cpp  opencv_implement.cpp  with_graph.cpp  with_graph_v1.1.cpp
test_images_descriptor/bird/: bird_descr2.txt  bird_descr3.txt  bird_descr4.txt  bird_descr5.txt  bird_descr6.txt  bird_descr7.txt  bird_descr8.txt  bird_keypt2.txt  bird_keypt3.txt  bird_keypt4.txt  bird_keypt5.txt  bird_keypt6.txt  bird_keypt7.txt  bird_keypt8.txt  bird_status.txt
test_images_descriptor/casablanca/: casablanca_descr1.txt  casablanca_descr2.txt  casablanca_descr3.txt  casablanca_descr4.txt  casablanca_descr5.txt  (+8 more)
test_module/: TESTING_INFO  cpp_output1.txt  cpp_testing.cpp  test1_1.txt  test1_2.txt  test1_3.txt  test2_1.txt  test2_2.txt  test2_3.txt  test3_1.txt  test3_2.txt  test3_3.txt  test4_1.txt  test4_2.txt  test4_3.txt  test5_1.txt  test5_2.txt  test5_3.txt  vx_output2.txt  vx_output3.txt  vx_output4.txt  vx_output5.txt  vx_testing.cpp
(+385 files in other folders)
